fix filter link visual issue on mobile (iPhone 5)

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -15,6 +15,8 @@ button {
   background-color: $primary-color;
   color: $primary-complementary-color;
   padding: $tiny-size $small-size;
+  font-weight: 300;
+  font-size: $x-small-size + 1;
 }
 
 select {
